@@ -73,6 +73,7 @@ importFrom(stringr,fixed)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_replace)
+importFrom(tidycensus,get_acs)
 importFrom(tidyr,separate)
 importFrom(tidyr,unite)
 importFrom(tigris,tracts)
